# soundfiller-studio

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/: PRD.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analysis.rs  commands.rs  lib.rs  main.rs
src/components/: AnalyseTab.tsx  BarGrid.tsx  BpmPicker.tsx  NotesPanel.tsx  SectionHeaders.tsx
src/lib/: tauri.ts
src/store/: useProjectStore.ts
src/templates/: classic-prydz.ts  index.ts
