[package]
name = "soundfiller-studio"
version = "0.1.0"
description = "Desktop arrangement planner and analyser for electronic music producers"
authors = ["Soundfiller <mans@soundfiller.com>"]
license = "MIT"
repository = "https://github.com/soundfiller/soundfiller-studio"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "soundfiller_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "wav", "isomp4"] }
rustfft = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
